tests/valid/module/child_parent_private_access.facet
pub mod api {
  fn id(x: affine isize) -> affine isize { x }

  pub mod child {
    pub fn call(x: affine isize) -> affine isize {
      (id x)
    }
  }
}

fn main() -> affine isize {
  1
}
