tests/invalid/function/local_let_rec_linear_capture.facet
fn main() -> linear isize {
  let y: linear isize = 1 in
  let rec [y] f(x: linear isize) -> linear isize {
    x
  }
  in (f 0)
}
